--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,31 @@
-name: Java CI/CD Pipeline
+name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "main" ] # Запускать при пуше в main
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ] # Запускать при создании PR в main
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. Скачиваем код репозитория
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v3
+      # 2. Устанавливаем Java (JDK 21)
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
 
+      # 3. Даем права на выполнение Gradle-скрипту (этот шаг мы уже сделали)
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      # 4. Запускаем сборку и тесты
       - name: Build with Gradle
         run: ./gradlew build
