--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,5 +38,5 @@ jobs:
         run: chmod +x gradlew
 
       # 4. Запускаем сборку и тесты
-      - name: Build with Gradle
-        run: ./gradlew build
+      - name: Build and check coverage with Gradle
+        run: ./gradlew check
